[package]
name = "void"
version = "0.1.0"
authors = ["Akash Shakdwipeea <ashakdwipeea@gmail.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
r2d2-diesel = "1.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = "0.4.0-rc.1"
reqwest = "0.9.4"
log = "0.4"
env_logger = "0.6.0"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
